# Desafio-Tecnico-ARKO

./: .gitignore  README.md  pyproject.toml
companies/: models.py  urls.py  views.py
companies/management/commands/: companies_import.py
companies/migrations/: 0001_initial.py  0002_alter_company_federative_entity_alter_company_name_and_more.py
config/: settings.py  urls.py
core/: urls.py  views.py
regions/: models.py  urls.py  views.py
regions/management/commands/: ibge_import.py
regions/migrations/: 0001_initial.py  0002_alter_municipality_microregion.py  0003_rename_municipaly_district_municipality_and_more.py
templates/: index.html
templates/about/: index.html
templates/base/: base.html
templates/companies/: index.html
templates/districts/: index.html
templates/login/: index.html
templates/municipalities/: index.html
templates/state/: index.html
utils/: pagination.py
